// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CatalogeItemPropertiesTable > renders table correctly (editing properties) 1`] = `
<DocumentFragment>
  <div
    style="width: 100%;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-1atu56z-MuiPaper-root"
    >
      <div
        class="MuiTableContainer-root css-2fctus-MuiTableContainer-root"
        data-testid="properties-table-container"
      >
        <table
          class="MuiTable-root MuiTable-stickyHeader css-ts728e-MuiTable-root"
          style="--header-mrt_row_select-size: 60; --col-mrt_row_select-size: 60; --header-property_name-size: 250; --col-property_name-size: 250; --header-property_type-size: 150; --col-property_type-size: 150; --header-property_allowed_values-size: 300; --col-property_allowed_values-size: 300; --header-property_unit_id-size: 175; --col-property_unit_id-size: 175; --header-property_mandatory-size: 200; --col-property_mandatory-size: 200; --header-mrt_row_spacer-size: 40; --col-mrt_row_spacer-size: 40;"
        >
          <thead
            class="MuiTableHead-root css-q4cnup-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-ssspk8-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-z6nosn-MuiTableCell-root"
                colspan="1"
                data-index="0"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-1w86f15"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-4ng264"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-bbxzxe"
                    >
                      Select
                    </div>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  />
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-cq3ewh-MuiTableCell-root"
                colspan="1"
                data-index="1"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Name"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Name
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Name ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Name ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Name"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":r14:"
                            placeholder="Filter by Name"
                            title="Filter by Name"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1ls0n6e-MuiTableCell-root"
                colspan="1"
                data-index="2"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Type"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Type
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Type ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Type ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Type"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":r1a:"
                            placeholder="Filter by Type"
                            title="Filter by Type"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-r93p36-MuiTableCell-root"
                colspan="1"
                data-index="3"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Allowed values"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Allowed values
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Allowed values ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Allowed values ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Allowed values"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":r1g:"
                            placeholder="Filter by Allowed values"
                            title="Filter by Allowed values"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                style="display: flex; width: 440px;"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-129p5vw-MuiTableBody-root"
          >
            <tr
              aria-label="Pumping Speed row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="0"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-53o830-MuiTableCell-root"
                data-index="0"
              >
                <span
                  aria-label="0 radio button"
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1ezkbdg-MuiButtonBase-root-MuiRadio-root"
                  data-mui-internal-clone-element="true"
                >
                  <input
                    aria-label="Toggle select row"
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    type="radio"
                    value=""
                  />
                  <span
                    class="css-hyxlzm"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="Pumping Speed"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Pumping Speed
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="number"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  number
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              >
                <div
                  aria-label="300, 400, 500"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  300, 400, 500
                </div>
              </td>
              <td
                style="display: flex; width: 440px;"
              />
            </tr>
            <tr
              aria-label="Ultimate Pressure row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="1"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-53o830-MuiTableCell-root"
                data-index="0"
              >
                <span
                  aria-label="1 radio button"
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1ezkbdg-MuiButtonBase-root-MuiRadio-root"
                  data-mui-internal-clone-element="true"
                >
                  <input
                    aria-label="Toggle select row"
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    type="radio"
                    value=""
                  />
                  <span
                    class="css-hyxlzm"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="Ultimate Pressure"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Ultimate Pressure
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="number"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  number
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              >
                <div
                  aria-label="Any"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Any
                </div>
              </td>
              <td
                style="display: flex; width: 440px;"
              />
            </tr>
            <tr
              aria-label="Axis row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="2"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-53o830-MuiTableCell-root"
                data-index="0"
              >
                <span
                  aria-label="2 radio button"
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1ezkbdg-MuiButtonBase-root-MuiRadio-root"
                  data-mui-internal-clone-element="true"
                >
                  <input
                    aria-label="Toggle select row"
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    type="radio"
                    value=""
                  />
                  <span
                    class="css-hyxlzm"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="Axis"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Axis
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="Text"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Text
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              >
                <div
                  aria-label="y, x, z"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  y, x, z
                </div>
              </td>
              <td
                style="display: flex; width: 440px;"
              />
            </tr>
          </tbody>
          <tfoot
            class="MuiTableFooter-root css-4ar9ic-MuiTableFooter-root"
          />
        </table>
      </div>
      <div
        class="MuiBox-root css-10gei56"
      >
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-3fnbcm-MuiPaper-root-MuiAlert-root"
                role="alert"
              >
                <div
                  class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
                >
                  <div
                    class="MuiStack-root css-5kul5x-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-k008qs"
                    >
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1llu0od"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-13zw5gk-MuiTypography-root"
          >
            Total Properties: 3
          </p>
          <div
            class="MuiBox-root css-nokk8"
          >
            <div
              class="MuiTablePagination-root MuiBox-root css-8k4lth"
            >
              <div
                class="MuiBox-root css-exd1zr"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-uqq6zz-MuiFormLabel-root-MuiInputLabel-root"
                  for="mrt-rows-per-page"
                >
                  Rows per page
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary  css-1mmm5cp-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                >
                  <div
                    aria-controls=":rv:"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Rows per page"
                    class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                    role="combobox"
                    tabindex="0"
                  >
                    15
                  </div>
                  <input
                    aria-hidden="true"
                    aria-invalid="false"
                    class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                    id="mrt-rows-per-page"
                    tabindex="-1"
                    value="15"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                    data-testid="ArrowDropDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <nav
                aria-label="pagination navigation"
                class="MuiPagination-root MuiPagination-outlined css-1oj2twp-MuiPagination-root"
              >
                <ul
                  class="MuiPagination-ul css-wjh20t-MuiPagination-ul"
                >
                  <li>
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-disabled MuiPaginationItem-previousNext css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="ChevronLeftIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-current="true"
                      aria-label="page 1"
                      class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-selected MuiPaginationItem-page css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      tabindex="0"
                      type="button"
                    >
                      1
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-disabled MuiPaginationItem-previousNext css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="ChevronRightIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CatalogeItemPropertiesTable > renders table correctly (not editing properties) 1`] = `
<DocumentFragment>
  <div
    style="width: 100%;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-1atu56z-MuiPaper-root"
    >
      <div
        class="MuiTableContainer-root css-2fctus-MuiTableContainer-root"
        data-testid="properties-table-container"
      >
        <table
          class="MuiTable-root MuiTable-stickyHeader css-ts728e-MuiTable-root"
          style="--header-property_name-size: 250; --col-property_name-size: 250; --header-property_type-size: 200; --col-property_type-size: 200; --header-property_allowed_values-size: 300; --col-property_allowed_values-size: 300; --header-property_unit_id-size: 200; --col-property_unit_id-size: 200; --header-property_mandatory-size: 200; --col-property_mandatory-size: 200; --header-mrt_row_spacer-size: 40; --col-mrt_row_spacer-size: 40;"
        >
          <thead
            class="MuiTableHead-root css-q4cnup-MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head css-ssspk8-MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-cq3ewh-MuiTableCell-root"
                colspan="1"
                data-index="0"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Name"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Name
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Name ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Name ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Name"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":r5:"
                            placeholder="Filter by Name"
                            title="Filter by Name"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1ls0n6e-MuiTableCell-root"
                colspan="1"
                data-index="1"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Type"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Type
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Type ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Type ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Type"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":rb:"
                            placeholder="Filter by Type"
                            title="Filter by Type"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-r93p36-MuiTableCell-root"
                colspan="1"
                data-index="2"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-68rqdf"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Allowed values"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Allowed values
                      </p>
                    </div>
                    <span
                      aria-label="Sort by Allowed values ascending"
                      class="MuiBadge-root css-1c32n2y-MuiBadge-root"
                      data-mui-internal-clone-element="true"
                    >
                      <span
                        aria-label="Sort by Allowed values ascending"
                        class="MuiButtonBase-root MuiTableSortLabel-root Mui-active css-118d58w-MuiButtonBase-root-MuiTableSortLabel-root"
                        role="button"
                        tabindex="0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon"
                          data-testid="SyncAltIcon"
                          focusable="false"
                          style="transform: rotate(-90deg) scaleX(0.9) translateX(-1px);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 12 4-4-4-4v3H3v2h15zM6 12l-4 4 4 4v-3h15v-2H6z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightCircular MuiBadge-overlapCircular css-2v5rxe-MuiBadge-badge"
                      >
                        0
                      </span>
                    </span>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-jk1t0h-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-953pxc-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Filter by Allowed values"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd css-929hxt-MuiInputBase-input-MuiInput-input"
                            id=":rh:"
                            placeholder="Filter by Allowed values"
                            title="Filter by Allowed values"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                          >
                            <span
                              aria-label="Clear filter"
                              class=""
                              data-mui-internal-clone-element="true"
                            >
                              <button
                                aria-label="Clear filter"
                                class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1so9ih7-MuiButtonBase-root-MuiIconButton-root"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                                  data-testid="CloseIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-alignLeft MuiTableCell-sizeMedium css-15bzkj8-MuiTableCell-root"
                colspan="1"
                data-index="3"
                scope="col"
              >
                <div
                  class="Mui-TableHeadCell-Content MuiBox-root css-c8wlay"
                >
                  <div
                    class="Mui-TableHeadCell-Content-Labels MuiBox-root css-1byo2ey"
                  >
                    <div
                      class="Mui-TableHeadCell-Content-Wrapper MuiBox-root css-lapokc"
                    >
                      <p
                        aria-label="Unit"
                        class="MuiTypography-root MuiTypography-body1 css-1jmsoko-MuiTypography-root"
                        data-mui-internal-clone-element="true"
                        role="tooltip"
                      >
                        Unit
                      </p>
                    </div>
                  </div>
                  <div
                    class="Mui-TableHeadCell-Content-Actions MuiBox-root css-epvm6"
                  >
                    <button
                      aria-label="Move"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1uxkzex-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      draggable="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DragHandleIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 9H4v2h16zM4 15h16v-2H4z"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Column Actions"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1p8dotb-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="MoreVertIcon"
                        focusable="false"
                        style="transform: scale(0.9);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <div
                    class="Mui-TableHeadCell-ResizeHandle-Wrapper MuiBox-root css-1ug570k"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem Mui-TableHeadCell-ResizeHandle-Divider css-f5y87h-MuiDivider-root"
                    />
                  </div>
                </div>
              </th>
              <th
                style="display: flex; width: 240px;"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root css-129p5vw-MuiTableBody-root"
          >
            <tr
              aria-label="Pumping Speed row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="0"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="0"
              >
                <div
                  aria-label="Pumping Speed"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Pumping Speed
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="number"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  number
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="300, 400, 500"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  300, 400, 500
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-2t2lua-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              >
                liters per second
              </td>
              <td
                style="display: flex; width: 240px;"
              />
            </tr>
            <tr
              aria-label="Ultimate Pressure row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="1"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="0"
              >
                <div
                  aria-label="Ultimate Pressure"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Ultimate Pressure
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="number"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  number
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="Any"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Any
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-2t2lua-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              >
                millibar
              </td>
              <td
                style="display: flex; width: 240px;"
              />
            </tr>
            <tr
              aria-label="Axis row"
              class="MuiTableRow-root MuiTableRow-root css-i1y727-MuiTableRow-root-MuiTableRow-root"
              data-index="2"
              role="row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-10v69qq-MuiTableCell-root-MuiTableCell-root"
                data-index="0"
              >
                <div
                  aria-label="Axis"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Axis
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1f6k3xk-MuiTableCell-root-MuiTableCell-root"
                data-index="1"
              >
                <div
                  aria-label="Text"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  Text
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-uzl2wb-MuiTableCell-root-MuiTableCell-root"
                data-index="2"
              >
                <div
                  aria-label="y, x, z"
                  class="MuiTypography-root MuiTypography-body1 css-kj4bc9-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                  role="tooltip"
                >
                  y, x, z
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-2t2lua-MuiTableCell-root-MuiTableCell-root"
                data-index="3"
              />
              <td
                style="display: flex; width: 240px;"
              />
            </tr>
          </tbody>
          <tfoot
            class="MuiTableFooter-root css-4ar9ic-MuiTableFooter-root"
          />
        </table>
      </div>
      <div
        class="MuiBox-root css-10gei56"
      >
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-3fnbcm-MuiPaper-root-MuiAlert-root"
                role="alert"
              >
                <div
                  class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
                >
                  <div
                    class="MuiStack-root css-5kul5x-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-k008qs"
                    >
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-1llu0od"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-13zw5gk-MuiTypography-root"
          >
            Total Properties: 3
          </p>
          <div
            class="MuiBox-root css-nokk8"
          >
            <div
              class="MuiTablePagination-root MuiBox-root css-8k4lth"
            >
              <div
                class="MuiBox-root css-exd1zr"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-uqq6zz-MuiFormLabel-root-MuiInputLabel-root"
                  for="mrt-rows-per-page"
                >
                  Rows per page
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary  css-1mmm5cp-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                >
                  <div
                    aria-controls=":r0:"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Rows per page"
                    class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                    role="combobox"
                    tabindex="0"
                  >
                    15
                  </div>
                  <input
                    aria-hidden="true"
                    aria-invalid="false"
                    class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                    id="mrt-rows-per-page"
                    tabindex="-1"
                    value="15"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                    data-testid="ArrowDropDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
              <nav
                aria-label="pagination navigation"
                class="MuiPagination-root MuiPagination-outlined css-1oj2twp-MuiPagination-root"
              >
                <ul
                  class="MuiPagination-ul css-wjh20t-MuiPagination-ul"
                >
                  <li>
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-disabled MuiPaginationItem-previousNext css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="ChevronLeftIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-current="true"
                      aria-label="page 1"
                      class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-selected MuiPaginationItem-page css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      tabindex="0"
                      type="button"
                    >
                      1
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-colorSecondary MuiPaginationItem-outlinedSecondary Mui-disabled MuiPaginationItem-previousNext css-iqeo3-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="ChevronRightIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
